<resources>
    <string name="app_name">DailyLife</string>
    <string name="landing_page_welcome">Welcome to the daily life app!</string>
    <string name="home_title">Home</string>
    <string name="functions_category">Functions</string>
    <string name="to_do_list_function">To-do list</string>
    <string name="notes_function">Notes</string>
    <string name="groceries_function">Groceries</string>
    <string name="technical_category">Technical</string>
    <string name="settings_function">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempNotetitle">noteTitle</string>
    <string name="tempNotetext">noteText</string>
    <string name="createTodoListButton">Create new list</string>
    <string name="todolistHint">To-do list title</string>
    <string name="todo_writeTodoHint">Write your todo...</string>
    <string name="todo_add_btn">Add</string>
    <string name="tempTodoTitle">todoTitle</string>
    <string name="addNewList">addNewListFAB</string>
    <string name="addNewNote">Create new note</string>
    <string name="notename">noteName</string>
    <string name="tempgrocerytext">GroceryName</string>
    <string name="note_writegroceryHint">Write your grocery item...</string>
    <string name="addnewGrocery">Add new grocery item</string>
    <string name="grocery_writeGroceryTitleHint">Grocery title...</string>
    <string name="grocery_add_btn">Add Item</string>
</resources>