<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_title" />
    </group>

    <item android:title="@string/functions_category">
        <menu>
            <item
                android:id="@+id/nav_todos"
                android:icon="@drawable/ic_todos"
                android:title="@string/to_do_list_function" />
            <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_notes"
                android:title="@string/notes_function" />
            <item
                android:id="@+id/nav_grocery"
                android:icon="@drawable/ic_grocery"
                android:title="@string/groceries_function" />
        </menu>
    </item>

    <item android:title="@string/technical_category">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24"
                android:title="@string/settings_function" />
        </menu>
    </item>
</menu>